--- a/templates/prvni_stranka.html
+++ b/templates/prvni_stranka.html
@@ -86,5 +86,9 @@
 
 <!-- Odkaz na stránku pro registraci -->
 <a href="/registrace">Registrovat se</a>
+
+<!-- Odkaz na stránku pro zpětnou vazbu -->
+<a href="/feedback" class="a">Feedback</a>
+
 </body>
 </html>
